updating index for github

--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<nav></nav>
 		<header></header>
-		<main><h1>Hi</h1></main>
+		<main><h1>New Updated Hi</h1></main>
 		<footer></footer>
 	</body>
 </html>
